cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-invalid-offsetof")
project(RiverSwathProfiles)
find_package(PCL 1.3 REQUIRED COMPONENTS)
include_directories(${PCL_INCLUDE_DIRS} ../../ ../../../TNT/)
link_directories(${PCL_LIBRARY_DIRS} ../../)
add_definitions(${PCL_DEFINITIONS})
add_executable(../river_profile_swath.out ../river_profile_swath.cpp ../../../LSDMostLikelyPartitionsFinder.cpp ../../../LSDIndexRaster.cpp ../../../LSDRaster.cpp ../../../LSDFlowInfo.cpp ../../../LSDJunctionNetwork.cpp ../../../LSDChiNetwork.cpp ../../../LSDIndexChannel.cpp ../../../LSDChannel.cpp ../../../LSDIndexChannelTree.cpp ../../../LSDStatsTools.cpp  ../../../LSDCloudBase.cpp ../../../LSDSwathProfile.cpp ../../../LSDShapeTools.cpp  ../../../LSDRasterSpectral.cpp)
target_link_libraries(../river_profile_swath.out ${PCL_LIBRARIES} las m stdc++ fftw3)
